# Stiptacular

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.sh  stiptacular.py
